update env example

--- a/env.example
+++ b/env.example
@@ -1,6 +1,8 @@
 # Discord bot token from https://discord.com/developers/applications
 DISCORD_TOKEN= insert token here
 
+# Shard count required for shard manager. Defaults to 1 if no value applied
+SHARD_COUNT=
 # Optional: Guild ID for testing (leave empty for global commands)
 GUILD_ID=
 
