--- a/env.example
+++ b/env.example
@@ -4,7 +4,7 @@ DISCORD_TOKEN= insert token here
 # Shard count required for shard manager. Defaults to 1 if no value applied
 SHARD_COUNT=
 
-# Max concurrency. default to 1 for non verified bots and up to 16 for large verified bots
+# Max concurrency. default to 1 for non-verified bots (and no value set) and up to 16 for large verified bots
 MAX_CONCURRENCY=
 
 # Optional: Guild ID for testing (leave empty for global commands)
