--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -14,11 +14,15 @@ on:
     branches: [ "main" ]
     paths-ignore:
       - '**/*.md'
+      - '**/*.example'
+      - '**/*.Gemfile'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
     paths-ignore:
       - '**/*.md'
+      - '**/*.example'
+      - '**/*.Gemfile'
   schedule:
     - cron: '20 10 * * 6'
 
