trying to make shards to work faster

--- a/env.example
+++ b/env.example
@@ -1,10 +1,16 @@
 # Discord bot token from https://discord.com/developers/applications
 DISCORD_TOKEN= insert token here
 
-# Shard count required for shard manager. Defaults to 1 if no value applied
-SHARD_COUNT=
+# Optional: Enable autosharding
+USE_AUTOSHARDING=false
 
-# Max concurrency. default to 1 for non-verified bots (and no value set) and up to 16 for large verified bots
+# Total shards for shard manager. Defaults to 1 if no value applied
+TOTAL_SHARDs=
+
+# SHARD_START needs to be passed as well to the individual process for multi-process mode
+# SHARD_COUNT needs to be passed as well to the individual process for multi-process mode
+
+# Declare max concurrency. This is normally pulled from Discord
 MAX_CONCURRENCY=
 
 # Optional: Guild ID for testing (leave empty for global commands)
