--- a/env.example
+++ b/env.example
@@ -1,23 +1,86 @@
-# Discord bot token from https://discord.com/developers/applications
-DISCORD_TOKEN= insert token here
+# Dice Maiden - Environment Configuration Example
+# Copy this file to .env and fill in your values
 
-# Optional: Enable autosharding
-USE_AUTOSHARDING=false
+# =============================================================================
+# REQUIRED CONFIGURATION
+# =============================================================================
 
-# Total shards for shard manager. Defaults to 1 if no value applied
-TOTAL_SHARDs=
+# Discord Bot Token (Required) https://discord.com/developers/applications
+# Get this from Discord Developer Portal > Applications > Your Bot > Bot > Token
+DISCORD_TOKEN=your_bot_token_here
 
-# SHARD_START needs to be passed as well to the individual process for multi-process mode
-# SHARD_COUNT needs to be passed as well to the individual process for multi-process mode
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
 
-# Declare max concurrency. This is normally pulled from Discord
-MAX_CONCURRENCY=
-
-# Optional: Guild ID for testing (leave empty for global commands)
-GUILD_ID=
-
-# Optional: Database URL (defaults to sqlite:main.db)
+# Database URL (Optional - defaults to sqlite:main.db)
+# For SQLite: sqlite:path/to/database.db
 DATABASE_URL=sqlite:main.db
 
+# =============================================================================
+# DEVELOPMENT/TESTING CONFIGURATION
+# =============================================================================
+
+# Guild ID for testing commands (Optional)
+# If set, slash commands will be registered only to this guild for faster testing
+# Remove or comment out for production to register commands globally
+# GUILD_ID=123456789012345678
+
 # Optional: Rust log level
-RUST_LOG=warn,dicemaiden_rs=info
+# RUST_LOG=warn,dicemaiden_rs=info
+
+# =============================================================================
+# SHARDING CONFIGURATION
+# =============================================================================
+
+# Manual shard count (Optional - defaults to 1)
+# Only modify if you have a large bot (1000+ servers)
+SHARD_COUNT=1
+
+# Use Discord's recommended shard count (Optional - defaults to false)
+# Set to true to let Discord determine optimal shard count
+USE_AUTOSHARDING=false
+
+# Maximum concurrent shard connections (Optional - defaults to 1)
+# Discord will override this with your bot's actual approved limit
+MAX_CONCURRENCY=1
+
+# =============================================================================
+# MULTI-PROCESS SHARDING (ADVANCED)
+# =============================================================================
+
+# Only use these variables if running multiple processes for large bot sharding
+# This allows faster startup times by running shards across multiple processes
+
+# Starting shard ID for this process (Optional)
+# SHARD_START=0
+
+# Total shards across all processes (Optional)
+# TOTAL_SHARDS=64
+
+# =============================================================================
+# EXAMPLE CONFIGURATIONS
+# =============================================================================
+
+# Development Setup:
+# DISCORD_TOKEN=your_dev_bot_token
+# GUILD_ID=your_test_server_id
+# DATABASE_URL=sqlite:dev.db
+
+# Small Production Bot:
+# DISCORD_TOKEN=your_prod_bot_token
+# DATABASE_URL=sqlite:main.db
+
+# Large Production Bot (Single Process):
+# DISCORD_TOKEN=your_prod_bot_token
+# DATABASE_URL=sqlite:main.db
+# SHARD_COUNT=32
+# MAX_CONCURRENCY=16
+
+# Large Production Bot (Multi-Process - Process 1 of 4):
+# DISCORD_TOKEN=your_prod_bot_token
+# DATABASE_URL=sqlite:main.db
+# SHARD_COUNT=16
+# SHARD_START=0
+# TOTAL_SHARDS=64
+# MAX_CONCURRENCY=16
