--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -32,3 +32,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_RUST_2015: false
           VALIDATE_RUST_2018: false
+          MARKDOWN_CONFIG_FILE: '{"MD024": false}'
