update env example

--- a/env.example
+++ b/env.example
@@ -35,6 +35,7 @@ DATABASE_URL=sqlite:main.db
 
 # Manual shard count (Optional - defaults to 1)
 # Only modify if you have a large bot (1000+ servers)
+# This will be offset by -1 by the bot due to shard ranges starting at 0
 SHARD_COUNT=1
 
 # Use Discord's recommended shard count (Optional - defaults to false)
