--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -40,3 +40,5 @@ jobs:
           VALIDATE_RUST_2015: false
           VALIDATE_RUST_2018: false
           VALIDATE_MARKDOWN: false
+          VALIDATE_CHECKOV: false
+          VALIDATE_YAML_PRETTIER: false
