--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -39,6 +39,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_RUST_2015: false
           VALIDATE_RUST_2018: false
+          VALIDATE_RUST_2021: false
           VALIDATE_MARKDOWN: false
           VALIDATE_CHECKOV: false
           VALIDATE_YAML_PRETTIER: false
