--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "dicemaiden-rs"
-version = "1.1.0"
-edition = "2021"
+version = "1.1.1"
+edition = "2024"
+rust-version = "1.85.0"
+keywords = ["discord", "bot", "dice", "rpg", "tabletop"]
 
 [[bin]]
 name = "dicemaiden-rs"
 path = "src/main.rs"
 
 [dependencies]
+# Discord/Async Runtime
 serenity = { version = "0.12", default-features = false, features = [
     "client",
     "gateway",
@@ -17,17 +20,29 @@ serenity = { version = "0.12", default-features = false, features = [
     "standard_framework",
     "builder",
 ] }
-tokio = { version = "1.21.2", features = ["full","signal"] }
+tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
+
+# Core functionality
 rand = "0.9"
 regex = "1.10"
-nom = "8.0"
 anyhow = "1.0"
-tracing = "0.1"
-tracing-subscriber = "0.3"
-serde = { version = "1.0", features = ["derive"] }
-clap = { version = "4.0", features = ["derive", "env"] }
-dotenv = "0.15"
-sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
-chrono = { version = "0.4", features = ["serde"] }
-sysinfo = "0.30"
 once_cell = "1.19"
+
+# Database
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
+chrono = { version = "0.4", features = ["serde"] }
+
+# Logging
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Utilities
+serde = { version = "1.0", features = ["derive"] }
+dotenv = "0.15"
+sysinfo = "0.35"
+
+[profile.release]
+# Optimizations for production builds
+lto = true              # Enable Link Time Optimization
+codegen-units = 1       # Single codegen unit for better optimization
+strip = true           # Strip debug symbols
