feat: enhance dice randomness with cryptographically secure RNG
- Replace rand::rng() with enhanced ChaCha20-based StdRng
- Add multiple entropy sources: OS entropy, time, thread, process, memory
- Create centralized RNG module (src/dice/rng.rs) with comprehensive tests
- Use Rust 2024 edition compatible methods (.random(), .random_range())
- Add getrandom dependency for OS-level entropy collection
- Maintain performance while significantly improving unpredictability

This enhancement makes dice rolls cryptographically secure and virtually
unpredictable while preserving all existing functionality and performance.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dicemaiden-rs"
-version = "1.4.0"
+version = "1.5.0"
 edition = "2024"
 rust-version = "1.87.0"
 keywords = ["discord", "bot", "dice", "rpg", "tabletop"]
@@ -27,6 +27,7 @@ rand = "0.9"
 regex = "1.10"
 anyhow = "1.0"
 once_cell = "1.19"
+getrandom = "0.2"
 
 # Database
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
